--- a/src/components/Estudios/Colpatria.scss
+++ b/src/components/Estudios/Colpatria.scss
@@ -111,4 +111,45 @@
             }
         }
     }
+    .poput{
+        background-color: color-mix(in srgb, var(--white2) 100%, transparent);
+        box-shadow: 0px 0px 0px 4px color-mix(in srgb, var(--primary-color) 60%, transparent);
+        scrollbar-color: var(--secondary-color4) transparent; /* Cambia los colores */
+        scrollbar-width: thin;
+        .header{
+            border-color: color-mix(in srgb, var(--secondary-color) 20%, transparent);
+            .union{
+                div{
+                    background-color: color-mix(in srgb, var(--secondary-color4) 100%, transparent);
+                    svg{
+                        color: color-mix(in srgb, var(--white2) 100%, transparent);
+                    }
+                }
+            }
+            button{
+                color: color-mix(in srgb, var(--secondary-color4) 40%, transparent);
+                cursor: pointer;
+                &:hover{
+                    background-color: color-mix(in srgb, var(--secondary-color4) 20%, transparent);
+                }
+            }
+        }
+        .contenido{
+            p{
+                background-color: color-mix(in srgb, var(--secondary-color4) 20%, transparent);
+                color: color-mix(in srgb, var(--secondary-color) 70%, transparent);
+            }
+            .principal{
+                background-color: color-mix(in srgb, var(--secondary-color4) 20%, transparent);
+                
+            }
+            .carrusel{
+                background-color: color-mix(in srgb, var(--secondary-color4) 20%, transparent);
+                color: color-mix(in srgb, var(--secondary-color) 70%, transparent);
+                button{
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
