--- a/src/components/Estudios/Complejo.scss
+++ b/src/components/Estudios/Complejo.scss
@@ -9,4 +9,37 @@
             color: color-mix(in srgb, var(--secondary-color) 80%, transparent);
         }
     }
+    .proyect{
+        .contenido{
+            .primero{
+                span{
+                    color: var(--primary-color);
+                    background-color: color-mix(in srgb, var(--primary-color2) 20%, transparent);
+                }
+                h2{
+                    color: var(--secondary-color2);
+                }
+                p{
+                    color: color-mix(in srgb, var(--secondary-color) 60%, transparent);
+                }
+            }
+            .segundo{
+                span{
+                    background-color: var(--secondary-color3);
+                    color: var(--primary-color3);
+                }
+            }
+            .tercero{
+                .enlace{
+                    background-color: var(--secondary-color4);
+                    color: var(--white);
+                    transition: all 0.3s;
+                    &:hover{
+                        transition: all 0.3s;
+                        box-shadow: 0px 0px 0px 4px color-mix(in srgb, var(--secondary-color) 40%, transparent);
+                    }
+                }
+            }
+        }
+    }
 }
