--- a/src/components/Estudios/Complejo.scss
+++ b/src/components/Estudios/Complejo.scss
@@ -40,6 +40,25 @@
                     }
                 }
             }
+        }        
+    }
+    .footer{
+        background-color: var(--secondary-color3);        
+        h3{
+            color: var(--primary-color);
+        }
+        p{
+            color: color-mix(in srgb, var(--secondary-color) 60%, transparent);
+        }
+        button{
+            background-color: var(--primary-color2);
+            color: var(--white);
+            transition: all 0.3s;
+            cursor: pointer;
+            &:hover{
+                transition: all 0.3s;
+                box-shadow: 0px 0px 0px 4px color-mix(in srgb, var(--secondary-color) 40%, transparent);
+            }
         }
     }
 }
