--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -82,7 +82,7 @@
 
     --secondary-color: #e9f0e8;
     --secondary-color2: #f7f3f3;
-    --secondary-color3: #c5b5d6;
+    --secondary-color3: #476643;
     --secondary-color4: #1c4e24;
 
     --naranaj: #4b8b3e;
