--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -15,6 +15,7 @@
     --white: #f5f5f5;
     --white2:rgb(255, 255, 255);
     --text-color: #333;
+    --dark: #1d1d1d;
 }
 
 .tema-oscuro {
@@ -34,6 +35,7 @@
     --white: #0c0c0c;
     --white2:#171717;
     --text-color: #c2c2c2;
+    --dark: #ffffff;
 }
 
 .tema-violeta {
@@ -53,6 +55,7 @@
     --white: #1f0015;
     --white2: #351135;
     --text-color: #ffffff;
+    --dark: #2b1832;
 }
 
 .tema-rojo {
@@ -72,6 +75,7 @@
     --white: #f5f5f5;
     --white2: #ffffff;
     --text-color: #141111;
+    --dark: #3d0f0f;
 }
 
 .tema-camila {
@@ -91,4 +95,5 @@
     --white: #2d5d24;
     --white2: #193015;
     --text-color: #dce2d8;
+    --dark: #133514;
 }
