--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -41,6 +41,7 @@
     }
 }
 .numeros{
+    background-color: color-mix(in srgb, var(--primary-color2) 20%, transparent);
     h2{
         color: color-mix(in srgb, var(--primary-color) 80%, transparent);
     }
@@ -57,4 +58,41 @@
     h3{
         color: color-mix(in srgb, var(--secondary-color) 100%, transparent);
     }
+}
+.habilidades{
+    h2{
+        color: color-mix(in srgb, var(--primary-color) 80%, transparent);
+    }
+    p{
+        color: color-mix(in srgb, var(--text-color) 90%, transparent);
+    }
+    h3{
+        color: color-mix(in srgb, var(--secondary-color) 80%, transparent);
+    }
+    .cont{
+        background-color: var(--white2);
+        .barra{
+            background-color: var(--primary-color);
+        }
+        span{
+            color: color-mix(in srgb, var(--secondary-color) 100%, transparent);
+        }
+        &:hover{
+            background-color: color-mix(in srgb, var(--secondary-color) 90%, transparent);
+            h3{
+                color: color-mix(in srgb, var(--white2) 100%, transparent);
+            }
+            span{
+                color: color-mix(in srgb, var(--white2) 100%, transparent);
+            }
+            .barra{
+                background-color: var(--primary-color2);
+            }
+        }
+    }
+    .active{
+        background-color: color-mix(in srgb, var(--primary-color3) 10%, transparent);
+        border-color: var(--primary-color3);
+    }
+    
 }
